  * Intervention is based on a rising threshold based on build type and presence of Apple firmware
- Removes `BootKicker` feature
  * The feature was added as part of attempts to provide the RefindPlus screen on MacPro5,1
  * This was ultimately achieved via other means but the feature was maintained for potential benefits
  * The feature never actually worked properly however, hence the removal
- Amends Default Loader Scan for APFS Support Volumes
  * APFS `Recovery`, `Update` and `VM` volumes are now added to the `DontScanVolume` list by default
- Amends Scan for `.VolumeIcons` and `VolumeBadges`
  * Volumes in the `DontScanVolume` list are now skipped
- Amends System Table Reallocations
  * No longer copies memory for system table reallocations
  * Some Mac models fail to boot with this following recent firmware updates
  * Other recent changes to RefindPlus may have also affected booting 'FileVault' encrypted volumes
- Amends 'HandleProtocol' Stashing
  * No longer stashes and restores HandleProtocol on 'OcProvideConsoleGop' call
- Amends 'CleanNvram' Feature
  * The Emulated NVRAM on the filesystem is now also cleared
- Renames the `SilentBoot` Feature as `DirectBoot`
  * This more accurately describes the feature.
- Renames Misc Tokens to Permit Grouping of Related Tokens
  * The `uga_pass_through` token is renamed as `pass_uga_through`
  * The `XYZ_hidden_icons` tokens are renamed as `hidden_icons_XYZ`
  * The `XYZ_renderer` tokens are renamed as `renderer_XYZ`
- Extends fixes on Mac Recovery Implementation for MacOS on APFS
  * Adjusted to cover all MacOS instances on APFS
  * APFS Recovery Volumes are handled as Mac Recovery Tools and not as volumes with loaders
  * IMPORTANT:
    - This implementation is still a work in progress ... feedback required/welcome


0.13.2.AN (08 Feb 2022):
-----------------------
- Multiple Misc Stability Fixes
  * Major refactoring and restructuring for improved stability
  * Also applied to filesystem drivers